# get_papers_project

./: LICENSE  README.md  pyproject.toml
cli/: main.py  test
get_papers_list/: api.py  processing.py  test
